# ai.blog

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  ref_article.json  render.yaml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  auth_challenges.py  bootstrap.py  client_ip.py  db.py  email_verification.py  encryption.py  env.py  feed_meta.py  frontend_refresh.py  http_cache.py  main.py  models.py  notifications.py  passwords.py  rate_limit.py  schema_compat.py  schemas.py  seed.py  site_config.py  storage.py  subscription_tokens.py  turnstile.py  uploads.py  url_safety.py  user_auth.py
backend/app/routers/: admin.py  home.py  posts.py  subscriptions.py  users.py
backend/app/services/: __init__.py  admin_posts.py  ai_channels.py  ai_provider_manager.py  cover_art.py  image_generation_jobs.py  text_generation_jobs.py  user_account.py
backend/tests/: conftest.py  test_account_features.py  test_admin.py  test_admin_users.py  test_ai_image_responses.py  test_bootstrap.py  test_client_ip.py  test_cover_art.py  test_db.py  test_email_auth_flows.py  test_email_verification.py  test_encryption.py  test_endpoints_extended.py  test_env.py  test_health.py  test_home_modules.py  test_passwords.py  test_post_detail.py  test_post_personalization.py  test_posts_list.py  test_proxy_image.py  test_public_home_bootstrap.py  test_schema_compat.py  test_settings_stats.py  test_storage.py  test_subscriptions.py  test_turnstile.py  test_url_safety.py  test_users_auth.py  test_users_sync.py
(+220 files in other folders)
