[project]
name = "ai-dev-blog-backend"
version = "0.1.0"
description = "Backend for AI dev blog"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.32.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.9.0",
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "python-jose[cryptography]>=3.3.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
